--- a/styles/css.css
+++ b/styles/css.css
@@ -35,21 +35,14 @@ button.btn {
 a.btn,.btn {
    margin-right: 1em;
 	display: inline-block;
-	outline: none;
-	*zoom: 1;
 	text-align: center;
-	text-decoration: none;
-	font-family: inherit;
-	font-weight: 300;
-	letter-spacing: 1px;
-	vertical-align: middle;
+	letter-spacing: 5px;
 	border: 1px solid;
 	transition: all 0.2s ease;
-	width:80px;
-	height: 50px;
-	text-shadow: 0 1px 0 rgba(0,0,0,0.01);
-	border-radius: 3px;
-	
+	width:100%;
+	height: 100%;
+	font-size:25px;
+	font-family: cwTeXYen,sans-serif ;
 }
 /* Radius */
 .btn-radius {
@@ -253,10 +246,7 @@ a.btn,.btn {
 	line-height: 1.5em;
 }
 .font10{
-	font-size:25px;
-	font-family: cwTeXYen,sans-serif ;
-	text-align:center;
-	color:block;
+	
 }
 
 .font11{
