調整產品擺放位置

--- a/styles/css.css
+++ b/styles/css.css
@@ -158,9 +158,9 @@ a.btn,.btn {
 }
 .font2{
 	border-radius:10px;
-	font-size:30px;
+	font-size:25px;
 	font-family: cwTeXYen,sans-serif ;
-	letter-spacing:10px ;
+	letter-spacing:5px ;
 }
 .font3{
 	font-size: 25px;
@@ -260,9 +260,7 @@ a.btn,.btn {
 	margin: 80px auto;
 	line-height: 50px;
 }
-#history img{
-	margin:0 50px; 
-}
+
 #history p{
 	margin:50px auto; 
 }
@@ -350,7 +348,7 @@ footer{
 footer h3{
 	font-family: cwTeXYen,sans-serif;
 	font-weight:bolder;
-	margin-bottom: 20px;
+
 }
 footer p{
 	font-size: 20px;
@@ -368,7 +366,9 @@ footer img{
 footer a{
 	color: black;
 }
-
+#latest{
+	margin-bottom: 0;
+}
 #booking-second h2{
 	line-height: 1em;
 	letter-spacing: 5px;
@@ -398,11 +398,11 @@ footer a{
 
 #booking-second .container{
 	background-color: rgb(255, 255, 255);
-	width: 50%;
-	height: auto;
+	border-radius: 2em 2em;
 }
 #booking-second{
-	padding: 2em 0;
+	padding: 2em 2em;
+	
 }
 #booking-second button{
 	background-color:rgb(119, 172, 107);
@@ -414,7 +414,7 @@ footer a{
 #modal-body button{
 	border-radius: 5px;
     width: 100%;
-	height: 50px;
+	height: 10%;
 	font-size: 25px;
 	font-family: cwTeXYen,sans-serif;
 	margin:0.5em;
@@ -425,12 +425,15 @@ footer a{
 	margin: 1em;
 
 }
-#bk-second .row .text-center button{
-	width: 50%;
-	height: 50px;
+#bk-second-menu{
+	padding-bottom: 1em;
+}
+#bk-second .justify-content-center .btn{
+	background-color: rgb(105, 163, 114);
+	width: 80%;
 	border: solid 1px;
 	border-radius: 2em 2em 2em 2em;
-
+	font-size: 20px;
 }
 
 #bk-second h3{
@@ -444,63 +447,41 @@ footer a{
 #bk-second .modal-header input{
 	outline:none;border:none;
 }
-#bk-second .modal-body select{
-	margin: 0.5em;
-}
-#bk-second .modal-body p{
-	margin: 0.5em;
-}
-#side1 h3{
+
+#side1 h2{
 	font-family: cwTeXYen,sans-serif;
 	text-align: left;
 	padding-top: 1em;
 }
+
 #side1{
 	border-left:solid 1px  rgb(197, 191, 191);
 	border-top:solid 1px  rgb(197, 191, 191);
-}
-#bk-second .col-md-9{
-	border-top:solid 1px  rgb(197, 191, 191);
-	padding:2em 1em;
+	height: 89em;
+	overflow: scroll;
 }
 
-@media (min-width: 768px) and (max-width: 991.98px){
-	#third {
-		padding: 20px 10px;
-	}
-	#third a {
-		font-size: 15px;
-	}
-	#fourth h1 {
-		margin-top: 1.3em;
-		line-height: 1em;
-	}
-	#fourth p {
-		font-size: 25px;
-		text-align: center;
-		letter-spacing: 10px;
-		color: white;
-		line-height: 2em;
-		font-size:23px;
-	}
-	footer a {
-		font-size: 15px;
-		margin-right: 10px;
-	}
-	footer p{
-		font-size: 15px;
-	}
-	footer {
-		border-top: 1px solid #c9c9c9;
-		padding: 5px 0px;
-		background-color: rgb(238, 236, 231);
-	}
-	}
-	footer h3 {
-		font-family: cwTeXYen,sans-serif;
-		font-weight: bolder;
-		margin-bottom: 20px;
-	}
+#Sidebar  td,input{
+	font-size:20px;
+	font-family:cwTeXYen,sans-serif;
+}	
+
+#a td{
+	font-size: 20px;
+	font-family:  cwTeXYen,sans-serif;
+	width:150px;
+}
+#click {
+	margin:1em auto;
+}
+#ck-second h2{
+	line-height: 80px;
+	font-family:  cwTeXYen,sans-serif;
+}
+
+#bkok-second h1{
+	padding:5.6em 0;
+	font-family:  cwTeXYen,sans-serif;
 }
 
 
