--- a/styles/css.css
+++ b/styles/css.css
@@ -487,6 +487,20 @@ footer a{
 	font-family:  cwTeXYen,sans-serif;
 }
 
+.iframe-rwd {
+    position: relative;
+    padding-bottom: 65.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+.iframe-rwd iframe {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 
 
