--- a/styles/css.css
+++ b/styles/css.css
@@ -487,6 +487,18 @@ footer a{
 	font-family:  cwTeXYen,sans-serif;
 }
 
+.iframe-rwd {
+    position: relative;
+    padding:30px 15px 30px 15px;
+    overflow: hidden;
+}
+.iframe-rwd iframe {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 
 
