--- a/styles/css.css
+++ b/styles/css.css
@@ -45,15 +45,12 @@ a.btn,.btn {
 	letter-spacing: 5px;
 	border: 1px solid;
 	transition: all 0.2s ease;
-	width:100%;
-	height: 100%;
-	font-size:25px;
+	width: 80px;
+	height: 80px;
+	line-height: 30px;
 	font-family: cwTeXYen,sans-serif ;
 }
-/* Radius */
-.btn-radius {
-  border-radius: 300px;
-}
+
 /* Sizes */
 .btn-small {
 	font-size: 0.8125em;
@@ -320,16 +317,12 @@ text-align: center;
 	padding:40px 20px;
 }
 #third .btn{
-	border-radius: 300px;
+	border-radius: 100px;
 	color: white;
-	font-size: 25px;
+	font-size: 20px;
 }
 #third .btn-group{
-	width: 100%;
 	margin:10px 20px;
-}
-#third a{
-	font-size: 20px;
 }
 
 #fourth .container{
@@ -337,8 +330,8 @@ text-align: center;
 	padding-bottom:5em; 
 }
 #fourth img{
-	width:450px ;
-	height:300px;
+	width:300px ;
+	height:200px;
 }
 footer{
 	border-top: 1px solid #000000;
@@ -498,5 +491,6 @@ footer a{
     height: 100%;
 }
 
-
-
+#latest .col-md-4{
+	padding: 1em 2em;
+}
