更新es6語法及命名

--- a/styles/css.css
+++ b/styles/css.css
@@ -499,7 +499,7 @@ footer a{
 	padding: 1em 2em;
 }
 
-#la.btn{
+#orderButton.btn{
 	width: 100%;
 	font-size: 20px;
 	font-family:  cwTeXYen,sans-serif;
