網頁下方切齊底部

--- a/styles/css.css
+++ b/styles/css.css
@@ -5,6 +5,11 @@
 #index-latest {
   background-color: #eeece7;
 }
+footer {
+  border-top: 1px solid #000000;
+  padding: 20px 0px;
+  background-color: rgb(238, 236, 231);
+}
 p,
 b,
 a,
@@ -79,7 +84,6 @@ h6 {
   }
 
   #index-latest h5 {
-    margin-top: 10px;
     text-align: left;
     font-family: cwTeXYen, sans-serif;
   }
@@ -94,10 +98,6 @@ h6 {
   }
   #index-latest a:hover {
 	color: black;
-  }
-
-  #index-latest img {
-    margin-top: 10px;
   }
 }
 
@@ -137,7 +137,7 @@ h6 {
 }
 
 #booking-second{
-	padding: 20px;
+	padding:70px 20px;
 }
 
 #booking-second .container {
@@ -188,8 +188,8 @@ margin: 10px;
 width: 100%;
 }
 
-#ck-second h4{
-	margin: 10px;
+#ck-second h4,#ck-second .row{
+	margin: 30px 0;
 }
 #ck-second p{
 	text-align: left;
@@ -208,7 +208,7 @@ width: 100%;
 	font-size: 1rem;
 }
 #bkok-second h3{
-    padding: 55% 0;
+    padding: 17rem 0;
     font-family: cwTeXYen, sans-serif;
   }
 /* Small devices (landscape phones, 576px and up)*/
@@ -430,11 +430,7 @@ width: 100%;
     width: 300px;
     height: 200px;
   }
-  footer {
-    border-top: 1px solid #000000;
-    padding: 20px 0px;
-    background-color: rgb(238, 236, 231);
-  }
+  
   footer h3 {
     font-family: cwTeXYen, sans-serif;
     font-weight: bolder;
