--- a/styles/css.css
+++ b/styles/css.css
@@ -36,6 +36,7 @@ select{
 #second p {
   letter-spacing: 1vmin;
   color: rgb(255, 255, 255);
+  font-size: 4vmin;
 }
 #index-third .title,
 #third .title {
@@ -79,7 +80,7 @@ select{
 }
 footer {
   border-top: 1px solid #000000;
-  padding: 2.8vmin;   
+  padding: 6vmin;   
   background-color: rgb(238, 236, 231);
 }
 #third {
@@ -101,6 +102,7 @@ footer {
   font-size: 6vmin;
   color: white;
   letter-spacing: 3vmin;
+  margin-top: 5vmin;
 }
 #fourthimg{
   max-width: 80%;
@@ -183,20 +185,28 @@ footer {
     width: 100%;
     font-family: cwTeXYen, sans-serif;
     margin-bottom: 3vmin;
+    font-size: 3vmin;
   }
 
   #side1 input,td{
     font-family: cwTeXYen, sans-serif;
   }
-  #ck-second h4,#ck-second .row{
-    margin: 4vmin 0;
+  #ck-second .title{
+    font-size: 5vmin;
+    margin: 10vmin 0;
+  }
+  #ck-second .row{
+    margin: 10vmin 0;
+  }
+  #ck-second .table-responsive{
+    margin: 15vmin 0 5vmin 0;
   }
   #ck-second p{
     text-align: left;
     font-size: 3vmin;
   }
   .table td{
-    font-size: 0.7rem;
+    font-size: 3vmin;
   }
   .table{
     margin: 0;
@@ -205,6 +215,8 @@ footer {
     margin: 10px;
     font-family: cwTeXYen, sans-serif;
     font-size: 3vmin;
+    letter-spacing: 2vmin;
+    padding: 1vmin 4vmin;
   }
   #bkok-second h3{
       padding: 17rem 0;
@@ -311,143 +323,20 @@ width: 100%;
     margin: 10vmin auto;
     line-height: 7vmin;
   }
-
   #history p {
     margin: 7vmin auto;
     line-height: 7vmin;
-  }
-
-  #index-fourth h2 {
-    margin-bottom: 2em;
-    text-align: center;
-    background-color: rgb(227, 229, 227);
-    border-radius: 80px;
-    padding: 10px;
   }
   #index-fourth iframe {
     width: 100%;
     height: 500px;
   }
-
-  #intro {
-    background-color: rgb(238, 236, 231);
-  }
-
-  #collapsibleNavbar a {
-    font-size: 25px;
-    font-family: cwTeXYen, sans-serif;
-    color: black;
-  }
-
-  #second h1 {
-    font-family: cwTeXYen, sans-serif;
-    letter-spacing: 10px;
-    font-size: 67px;
-    font-weight: bolder;
-    color: white;
-    text-align: center;
-  }
-  #second p {
-    letter-spacing: 10px;
-    font-size: 30px;
-    color: white;
-    text-align: center;
-  }
-
-
-  #fourth .container {
-    padding-top: 5em;
-    padding-bottom: 5em;
-  }
-
-  #latest {
-    margin-bottom: 0;
-  }
-  #ti {
-    width: 50%;
-  }
-  #datepicker {
-    width: 50%;
-  }
-  
-
-
-  #modal-body button {
-    border-radius: 5px;
-    width: 100%;
-    height: 10%;
-    font-size: 25px;
-    font-family: cwTeXYen, sans-serif;
-    margin: 0.5em;
-  }
-
-  #menu-img {
-    width: 150px;
-    margin: 1em;
-  }
-  #booking-second{
-    padding:6vmin 6vmin;
-  }
-  #bk-second-menu {
-    padding-bottom: 1em;
-  }
-
-
-  #bk-second h3 {
-    font-family: cwTeXYen, sans-serif;
-    text-align: center;
-  }
-
-  #bk-second .modal-header h2 {
-    font-family: cwTeXYen, sans-serif;
-  }
-  #bk-second .modal-header input {
-    outline: none;
-    border: none;
-  }
-
-  #shopcar {
-    width: 100%;
-  }
-  #side1 h2 {
-    font-family: cwTeXYen, sans-serif;
-    text-align: left;
-    padding-top: 1em;
-  }
-
   #side1 {
     border-left: solid 1px rgb(197, 191, 191);
     border-top: solid 1px rgb(197, 191, 191);
     height: 89em;
     overflow: scroll;
   }
-
-  #Sidebar td,
-  input {
-    font-size: 20px;
-    font-family: cwTeXYen, sans-serif;
-  }
-
-  #a td {
-    font-size: 20px;
-    font-family: cwTeXYen, sans-serif;
-    width: 150px;
-  }
-  #click {
-    margin: 1em auto;
-  }
-  #ck-second h2 {
-    line-height: 80px;
-    font-family: cwTeXYen, sans-serif;
-  }
-
-  #bkok-second h1 {
-    padding: 5.6em 0;
-    font-family: cwTeXYen, sans-serif;
-  }
-
-
-
 }
 
 *,
