css產品介紹按鈕調整及加入html語意化標籤

--- a/styles/css.css
+++ b/styles/css.css
@@ -2,6 +2,13 @@
 h1,h2,h3,h4,h5,h6,p{
   margin: 1.5vmin 0;
 }
+h1{font-size: 8vmin;}
+h2{font-size: 7vmin;}
+h3{font-size: 6vmin;}
+h4{font-size: 5vmin;}
+h5{font-size: 4vmin;}
+h6{font-size: 3vmin;}
+
 p,b,a,label,span,ul,li {
   font-family: cwTeXYen, sans-serif;
   font-size: 3vmin;
@@ -15,36 +22,31 @@ select{
   font-family: cwTeXYen, sans-serif;
   font-size: 3vmin;
 }
-#intro {
+header {
   background-color: #eeece7;
 }
-#intro a {
+header a {
   text-align: left;
 }
-#intro img{
+header img{
   width: 12vmin;
   height: 10vmin;
 }
-#index-second .title,
-#second .title {
-  font-size: 8vmin;
+#index-second h1,
+#second h1 {
   letter-spacing: 1.5vmin;
   font-weight: bolder;
   color: rgb(255, 255, 255);
 }
-#index-second p,
-#second p {
+#index-second h4,
+#second h4 {
   letter-spacing: 1vmin;
   color: rgb(255, 255, 255);
-  font-size: 4vmin;
 }
-#index-third .title,
-#third .title {
+
+#index-fourth h4{
   font-size: 5vmin;
-}
-#index-fourth .title{
-  font-size: 5vmin;
-  margin-bottom: 5vmin;
+  margin:2vmin auto 5vmin auto;
   background-color: rgb(224, 221, 221);
   border-radius: 5vmin 5vmin;
   padding: 1vmin 4vmin;
@@ -69,13 +71,13 @@ select{
   width: 100%;
   height: 100%;
 }
-#index-latest a {
+footer a {
 	color: grey;
   }
-  #index-latest a:hover {
+  footer a:hover {
 	color: black;
   }
-#index-latest h5,#index-latest p {
+footer h5,footer p {
   text-align: left;
 }
 footer {
@@ -91,12 +93,12 @@ footer {
   text-align: center;
   border: 1px solid;
   transition: all 0.2s ease;
-  width: 16vmin;
-  height: 16vmin;
-  border-radius: 16vmin 16vmin;
+  width: 12vw;
+  height: 12vw;
+  border-radius: 12vw 12vw;
   color: white;
-  font-size: 3vmin;
-  padding: 4vmin;
+  font-size: 3vw;
+  padding: 2vw;
 }
 #fourth .title {
   font-size: 6vmin;
@@ -240,7 +242,12 @@ footer {
   letter-spacing: 1vmin;
   font-size: 5vmin;
 }
-
+#third .btn {
+  width: 14vw;
+  height: 14vw;
+  font-size: 3vw;
+  padding: 3vw;
+}
 /*
 #side1 img{
 	max-width: 70%;
@@ -269,16 +276,26 @@ width: 100%;
 
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) {
-
+  #third .btn { 
+    margin: 1vw 1vw;
+    width: 10vw;
+    height: 10vw;
+    font-size: 2vw;
+    padding: 2vw;
+} 
 }
 
 
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) {
-  #third .btn {
-    margin: 1vw 0.5vw;
+  #third .btn { 
+      margin: 1vw 1vw;
+      width: 7vw;
+      height: 7vw;
+      font-size: 1.5vw;
+      padding: 1.5vw;
   }
-  #business p {
+  #business h6 {
     margin: 6vmin auto;
     line-height: 5vmin;
   }
@@ -296,11 +313,18 @@ width: 100%;
     width: 100%;
     height: 90vmin;
   }
-  #business p {
+  #third .btn {
+    margin: 1vw 1vw;
+    width: 7vw;
+    height: 7vw;
+    font-size: 1.5vw;
+    padding: 1.5vw;
+  }
+  #business h6 {
     margin: 10vmin auto;
     line-height: 5vmin;
   }
-  #history p {
+  #history h6 {
     margin: 7vmin auto;
     line-height: 7vmin;
   }
@@ -313,17 +337,21 @@ width: 100%;
 @media (min-width: 1200px) {
   #third .btn {
     margin: 1vw 1vw;
+    width: 6vw;
+    height: 6vw;
+    font-size: 1.5vw;
+    padding: 1vw;
   }
 
   #index-second img,#second img{
     width: 100%;
     height: 90vmin;
   }
-  #business p {
+  #business h6 {
     margin: 10vmin auto;
     line-height: 7vmin;
   }
-  #history p {
+  #history h6 {
     margin: 7vmin auto;
     line-height: 7vmin;
   }
